// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BetterButton Default 1`] = `
<div
  className="custom-container"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": "#a0ce54",
      "border": "2px solid #a0ce54",
      "color": "white",
      "display": "inline-block",
      "outline": "none",
      "padding": "2px",
      "transition": "background-color 150ms ease-in-out",
    }
  }
>
  <button
    className="custom custom-primary"
    disabled={false}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#a0ce54",
        "border": 0,
        "color": "white",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": "0 auto",
        "outline": "none",
        "padding": "5px",
        "transition": "background-color 150ms ease-in-out",
        "width": "100%",
      }
    }
    type="button"
  >
    Default
  </button>
</div>
`;

exports[`Storyshots BetterButton Disabled 1`] = `
<div
  className="custom-container"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": "#a0ce5480",
      "border": "2px solid #c9e3a4",
      "color": "white",
      "display": "inline-block",
      "outline": "none",
      "padding": "2px",
      "transition": "background-color 150ms ease-in-out",
    }
  }
>
  <button
    className="custom custom-primary"
    disabled={true}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#c9e3a4",
        "border": 0,
        "color": "white",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": "0 auto",
        "outline": "none",
        "padding": "5px",
        "transition": "background-color 150ms ease-in-out",
        "width": "100%",
      }
    }
    type="button"
  >
    Disabled
  </button>
</div>
`;

exports[`Storyshots BetterButton Loading 1`] = `
<div
  className="custom-container"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": "#a0ce5480",
      "border": "2px solid #c9e3a4",
      "color": "white",
      "display": "inline-block",
      "outline": "none",
      "padding": "2px",
      "transition": "background-color 150ms ease-in-out",
    }
  }
>
  <button
    className="custom custom-primary"
    disabled={true}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#c9e3a4",
        "border": 0,
        "color": "white",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": "0 auto",
        "outline": "none",
        "padding": "5px",
        "transition": "background-color 150ms ease-in-out",
        "width": "100%",
      }
    }
    type="button"
  >
    <div
      className="spinner-border"
      style={
        Object {
          "fontSize": "6px",
          "height": "1rem",
          "marginRight": "10px",
          "width": "1rem",
        }
      }
    />
    Loading ...
  </button>
</div>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_PINNED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
